[package]
name = "ctrlvterm"
version = "0.1.0"
authors = ["Soham Bhattacharya <sohamb117@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
urlencoding = "1.1.1"
ureq = { version = "*", features=["json"]}
